--- a/index.html
+++ b/index.html
@@ -146,8 +146,8 @@
                         <ul class="line-height-one-five">
                             <li><span class="dotted">186</span> digital editions of historical
                                 Jewish cemeteries</li>
-                            <li><span class="dotted">34.000 headstones</span></li>
-                            <li>66.000 digital images</li>
+                            <li><span class="dotted">34,000 headstones</span></li>
+                            <li>66,000 digital images</li>
                         </ul></div>
                     <div class="six columns">
                         <figure class="mfp-lightbox"><a href="resources/img/epidat_startpage.png"
@@ -159,7 +159,7 @@
                 </div>
             </div>
             <div class="step">
-                <h2 class="red">epidat – quantity</h2>
+                <h2 class="red">epidat – amount of data</h2>
                 <figure class="mfp-lightbox row down-100">
                     <a
                         href="https://chart.googleapis.com/chart?cht=bvg&amp;chs=900x180&amp;chd=t2:5490,9965,14391,18127,21554,22279,24112,26380,28963,31087,33395,34064,35001|4,21,64,77,105,110,125,135,145,157,174,181,186&amp;chxr=0,2006,2018|1,0,40000|2,0,200,25&amp;chxt=x,y,r&amp;chds=0,40000,0,200&amp;chco=800000,003971&amp;chtt=epidat+2006-2018&amp;chm=N,000000,0,-1,8|N,000000,1,-1,8&amp;chdl=headstones|cemeteries&amp;chdlp=t">
@@ -195,7 +195,7 @@
                         <figure class="mfp-lightbox">
                             <a href="resources/img/epidat_middleages.png"><img
                                     src="resources/img/epidat_middleages.png" /></a>
-                            </figure>
+                        </figure>
                     </div>
                     <div class="six columns">
                         <p class="small">From 11<sup>th</sup> until 20<sup>th</sup> century.
@@ -218,6 +218,24 @@
                         href="http://www.steinheim-institut.de/cgi-bin/epidat?suche=*&amp;function=searchall&amp;lang=de&amp;check=2&amp;sm=AND&amp;wo=ed&amp;beg=1050&amp;end=1519"
                         >http://steinheim-institut.de/cgi-bin/epidat?suche=*&amp;function=searchall&amp;lang=de&amp;check=2&amp;sm=AND&amp;wo=ed&amp;beg=1050&amp;end=1519</a></p>
             </div>
+            <div class="step">
+                <h2 class="red">Languages</h2>
+                <div>
+                    <div class="row">
+                        <div class="mfp-lightbox six columns">
+                            <p><a href="resources/img/speyer.png"><img
+                                        src="resources/img/speyer.png" /></a></p>
+                        </div>
+                        <div class="six columns"><ul>
+                                <li>Hebrew</li>
+                                <li>German in Hebrew letters (1790<abbr>ff</abbr>)</li>
+                                <li>German (19<sup>th</sup> century)</li>
+                            </ul>
+                            <p class="x-small">example: <br /><a
+                                    href="http://steinheim-institut.de/cgi-bin/epidat?id=spy-6&amp;lang=en"
+                                    >http://steinheim-institut.de/cgi-bin/epidat?id=spy-6</a></p>
+                        </div>
+                    </div></div></div>
             <div class="step">
                 <h2 class="red centered">epidat – access options</h2>
                 <!-- Swiper -->
@@ -332,6 +350,69 @@
                 <h2 class="line-height-one-five"> transdisciplinarity </h2>
             </div>
             <div class="step">
+                <div class="row">
+                    <div class="six columns">
+                        <blockquote class="right medium">‎‏זה קבר של הרב ר׳ מאיר בר אברהם הכהן הזקן
+                            הנהרג על יחוד השם במ״א לפרט כ״ז בסיון ביום שנשרף בית הכנסת ונקרעו סיפרי
+                            תורה מנוחתו כבוד‏‎ </blockquote>
+                        <figure class="mfp-lightbox even-right"><a
+                                href="resources/img/2203_mz1_LDA-2008-074.png"><img
+                                    src="resources/img/2203_mz1_LDA-2008-074.png" /></a></figure><p
+                            class="x-small right up-25"><a
+                                href="http://www.steinheim-institut.de/cgi-bin/epidat?id=mz1-2203"
+                                >mz1-2203 foto by LDA Mainz</a></p>
+                    </div><div class="six columns">
+                        <dl class="medium">
+                            <dt class="red">name</dt>
+                            <dd>Meir b. Awraham HaCohen</dd>
+                            <dt class="red">date</dt>
+                            <dd>1281-06-15 | 27. Sivan 5041</dd>
+                            <dt class="red">event</dt>
+                            <dd>destruction of the synagogue and the torascrolls: ביום שנשרף בית
+                                הכנסת ונקרעו סיפרי תורה </dd>
+                            <dt class="red">concept</dt>
+                            <dd>הנהרג על יחוד השם</dd>
+                            <dt class="red">dislocation</dt>
+                            <dd>headstone was found by workers on 5. Juni 1899 in the cellar of the
+                                inn "Zur Stadt Mainz" in the street Große Bleiche</dd>
+
+                        </dl></div></div>
+            </div>
+            <div class="step">
+                <div class="row">
+                    <div class="six columns">
+                        <figure class="mfp-lightbox"><a href="resources/img/2338_FN_0206040127.jpg"
+                                    ><img src="resources/img/2338_FN_0206040127.jpg"
+                             /></a></figure><p class="x-small right"><a
+                                href="http://www.steinheim-institut.de/cgi-bin/epidat?id=hha-2338"
+                                >mz1-2203 foto by Bert Sommer</a></p>
+                    </div><div class="six columns">
+                        <dl class="even-left medium">
+                            <dt class="red">ornaments</dt>
+                            <dd>palmette</dd>
+                            <dt class="red">symbols</dt>
+                            <dd>magen david | hammer</dd>
+                            <dt class="red">name and origin</dt>
+                            <dd>David Hammerschlag from Hildesheim</dd>
+                            <dt class="red">intertextuality</dt>
+                            <dd>Allusions on biblical David</dd>
+                            <dd> 2 Sam. 15:30 דוד עלה במעלה </dd>
+                            <dd> 1 Kings 2.1  ויקרבו ימי דוד למות</dd>
+                        </dl></div></div>
+            </div>
+            <div class="step"><h2 class="red">what's in a name</h2>
+                <ul>
+                    <li>Bona</li>
+                </ul></div>
+            <div class="step"><h2>context beyond cemetery</h2>
+                <ul>
+                    <li>beauty of style</li>
+                    <li>beauty of decoration and form</li>
+                    <li>reflecting the surrounding</li>
+                </ul></div>
+            <div class="step"><h2>objects on objects</h2>
+                <p>relation between headstone and a certain house in a street of a city</p></div>
+            <div class="step">
                 <h2 class="red">Offene Lizenzen und offene Daten</h2>
                 <div class="mfp-lightbox twelve columns">
                     <p>
@@ -340,6 +421,7 @@
                         </a>
                     </p>
                 </div>
+                <div class="step"> death of a child – cultural phenomen premodern concept </div>
                 <div><p class="x-small right">source: <a href="https://twitter.com/rufuspollock"
                             >Rufus Pollock</a></p></div>
             </div>
@@ -376,10 +458,10 @@
                             <td><strong>quantity</strong></td>
                             <td><a
                                     href="http://library.brown.edu/search/solr_pub/iip/?q=*%3A*&amp;start=0&amp;rows=0&amp;indent=on&amp;facet=on&amp;facet.field=religion&amp;wt=json"
-                                    >3.634</a></td>
+                                    > 3,589</a></td>
                             <td><a href="http://steinheim-institut.de/cgi-bin/epidat?info=peranno"
-                                    >34.278</a></td>
-                            <td><a title="ca.">ca. 18.000</a></td>
+                                    >34,278</a></td>
+                            <td><a title="ca.">ca. 18,000</a></td>
                         </tr>
                         <tr>
                             <td><strong>time</strong></td>
@@ -412,7 +494,9 @@
                             <td><a
                                     href="http://www.steinheim-institut.de/cgi-bin/epidat?id=ffb-80&amp;lang=en"
                                     >ffb-80</a></td>
-                            <td><a href="http://www.inschriften.net/zeige/suchergebnis/treffer/nr/di034-0561.html#content">34-561</a></td>
+                            <td><a
+                                    href="http://www.inschriften.net/zeige/suchergebnis/treffer/nr/di034-0561.html#content"
+                                    >34-561</a></td>
                         </tr>
                     </tbody>
                 </table>
@@ -554,8 +638,11 @@
                 <div class="down-50">
                     <div class="four columns">
                         <div class="mfp-lightbox">
-                            <a href="resources/img/stoa-org-epidoc-gl-latest.png"><img
-                                    src="resources/img/stoa-org-epidoc-gl-latest.png" /></a>
+                            <a
+                                href="resources/img/screencapture-sourceforge-net-p-epidoc-wiki-Home-2018-06-11-12_24_59.png"
+                                    ><img
+                                    src="resources/img/screencapture-sourceforge-net-p-epidoc-wiki-Home-2018-06-11-12_24_59.png"
+                                 /></a>
                         </div>
                     </div>
                     <div class="eight columns">
@@ -796,6 +883,38 @@
                 <p class="right x-small"><a
                         href="http://www.stoa.org/epidoc/gl/latest/app-bibliography.html"
                         >http://www.stoa.org/epidoc/gl/latest/app-bibliography.html</a></p>
+            </div>
+            <div class="step">
+                <h2 class="red">Spatial relations</h2><h3>looking for patterns </h3>
+                <table class="small">
+                    <tr>
+                        <td>zoom in </td>
+                        <td>zoom out</td>
+                    </tr>
+                    <tr>
+                        <td>single object</td>
+                        <td>ensemble</td>
+                    </tr>
+                    <tr>
+                        <td>object</td>
+                        <td>context</td>
+                    </tr>
+                    <tr>
+                        <td>discovering units</td>
+                        <td>rows | fields </td>
+                    </tr>
+
+                </table>
+                <video src="resources/img/RiR_Heiligenhaus.mp4" controls="controls"
+                    autoplay="autoplay" class="centered small" width="1024"></video>
+                <p class="right x-small"><a href="https://wiki.de.dariah.eu/display/RIRPUB/RiR"
+                        >RiR-project 2012-2015</a></p>
+                <p class="right x-small">template: <a
+                        href="https://wiki.de.dariah.eu/display/RIRPUB/Template+zum+Erstellen+einer+SVG+Planskizze+in+Inkscape"
+                        >Howto make a dynamic map</a>(german)</p></div>
+            <div class="step">
+                <video src="resources/img/Rohuebersetzung.mp4" controls="controls" width="1024"
+                    autoplay="autoplay"></video>
             </div>
             <div class="step">
                 <div class="centered">
