--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
                 <h2 class="red up-25">Preservation and Education</h2>
                 <h4 class="down-100">
                     <strong>Slides:</strong>
-                    <a href="https://kollatzthomas/github.io/20180611_Utrecht"
+                    <a href="https://kollatzthomas.github.io/20180611_Utrecht/"
                         title="View the presentation online">
-                        https://kollatzthomas/github.io/20180611_Utrecht </a>
+                        https://kollatzthomas.github.io/20180611_Utrecht/#/ </a>
                 </h4>
                 <h5>
                     <strong><a href="http://orcid.org/0000-0003-1904-1841">Thomas
@@ -1010,22 +1010,25 @@ history
             <div class="step">
                 <div class="row">
                     <div class="six columns">
-                        <figure class="mfp-lightbox"><a
-                            href="resources/img/bf_Abb02_Schichtung.jpg"><img
-                                src="resources/img/bf_Abb02_Schichtung.jpg" /></a></figure>
+                        <figure class="mfp-lightbox"><a href="resources/img/bf_Abb02_Schichtung.jpg"
+                                    ><img src="resources/img/bf_Abb02_Schichtung.jpg"
+                             /></a></figure>
                         <figure class="mfp-lightbox"><a
                                 href="resources/img/bf_Spezifizierungen_neu.jpg"><img
                                     src="resources/img/bf_Spezifizierungen_neu.jpg" /></a></figure>
                         <figure class="mfp-lightbox"><a
-                            href="resources/img/bf_Skizze_Relationen.jpg"><img
-                                src="resources/img/bf_Skizze_Relationen.jpg" /></a></figure>
+                                href="resources/img/bf_Skizze_Relationen.jpg"><img
+                                    src="resources/img/bf_Skizze_Relationen.jpg" /></a></figure>
                     </div>
                     <div class="six columns"><h2 class="red">shape and form</h2>
-                        <blockquote>Change in style is happening very slowly in cemeteries. Change manifests itself not only in the textual tradition. Cultural change is also reflected in the use of forms. Text and form do not have to develop synchronously</blockquote>
+                        <blockquote>Change in style is happening very slowly in cemeteries. Change
+                            manifests itself not only in the textual tradition. Cultural change is
+                            also reflected in the use of forms. Text and form do not have to develop
+                            synchronously</blockquote>
                         <figure class="mfp-lightbox">
-                            <a
-                            href="resources/img/bf_RiR-Szenario_Abschluesse3.jpg"><img
-                                src="resources/img/bf_RiR-Szenario_Abschluesse3.jpg" /></a></figure>
+                            <a href="resources/img/bf_RiR-Szenario_Abschluesse3.jpg"><img
+                                    src="resources/img/bf_RiR-Szenario_Abschluesse3.jpg"
+                             /></a></figure>
                     </div>
                 </div>
             </div>
@@ -1288,8 +1291,8 @@ history
             <h4>Download</h4>
             <ul class="small">
                 <li>
-                    <a href="https://kollatzthomas.github.io/#">
-                        https://kollatzthomas.github.io/#
+                    <a href="https://kollatzthomas.github.io/20180611_Utrecht/#/">
+                        https://kollatzthomas.github.io/20180611_Utrecht/
                     </a>
                 </li>
                 <li>
