--- a/index.html
+++ b/index.html
@@ -948,11 +948,14 @@ history
             </div>
             <div class="step">
                 <h2 class="red">spatial relations</h2>
+                
                 <dl>
                     <dt>rationale</dt>
                     <dd>A single object – the <q>headstone</q> – is always part of an ensemble – the
                             <q>cemetery</q></dd>
                 </dl>
+                <div class="row">
+                    <div class="six columns">
                 <ul class="down-50">
                     <li><a
                             href="https://geobrowser.de.dariah.eu/embed/?kml=http://steinheim-institut.de/daten/epidat.kml"
@@ -963,6 +966,10 @@ history
                     <li>3D model of an cemetery with linked data – virtual tour</li>
                     <li>2D dynamic maps – searching for patterns | data analysis </li>
                 </ul>
+                    </div>
+                    <div class="six columns">
+                        <figure class="mfp-lightbox"><a href="resources/img/altonak.jpg"><img src="resources/img/altonak.jpg"/></a></figure><p class="x-small right">Working /w Tacheometer on Hamburg cemetery (<a href="https://www.uni-bamberg.de/bauforschung/personen/forschung-tobias-arera-ruetenik/">Tobias Arera-Rütenik</a>)</p>
+                    </div></div>
             </div>
             <div class="step">
                 <h2 class="red">Spatial relations</h2>
@@ -1021,14 +1028,19 @@ history
                                     src="resources/img/bf_Skizze_Relationen.jpg" /></a></figure>
                     </div>
                     <div class="six columns"><h2 class="red">shape and form</h2>
-                        <blockquote>Change in style is happening very slowly in cemeteries. Change
-                            manifests itself not only in the textual tradition. Cultural change is
-                            also reflected in the use of forms. Text and form do not have to develop
+                        <blockquote class="medium">Change in funeral tradition happens slowly. Change
+                            manifests itself not only in textual tradition. Cultural change is
+                            also reflected in the use of (new) forms. Text and form do not develop
                             synchronously</blockquote>
-                        <figure class="mfp-lightbox">
+                        <figure class="mfp-lightbox even-right">
                             <a href="resources/img/bf_RiR-Szenario_Abschluesse3.jpg"><img
                                     src="resources/img/bf_RiR-Szenario_Abschluesse3.jpg"
                              /></a></figure>
+                        <figure class="mfp-lightbox">
+                            <a href="resources/img/Rundbogen_pic.jpg"><img
+                                src="resources/img/Rundbogen_pic.jpg" style="width:30rem" 
+                            /></a></figure>
+                        
                     </div>
                 </div>
             </div>
@@ -1046,7 +1058,7 @@ history
                     <div class="six columns"><figure class="mfp-lightbox"><a
                                 href="resources/img/damage_report.png"><img
                                     src="resources/img/damage_report.png" /></a></figure><p
-                            class="x-small right">Damage report שו״ם</p></div>
+                            class="x-small right">damage report שו״ם</p></div>
                     <div class="six columns">
                         <ol>
                             <li>inventarisation: photographic record and – if possible – map </li>
