--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                     <strong>Slides:</strong>
                     <a href="https://kollatzthomas.github.io/20180611_Utrecht/"
                         title="View the presentation online">
-                        https://kollatzthomas.github.io/20180611_Utrecht/#/ </a>
+                        https://kollatzthomas.github.io/20180611_Utrecht/</a>
                 </h4>
                 <h5>
                     <strong><a href="http://orcid.org/0000-0003-1904-1841">Thomas
@@ -116,13 +116,15 @@
             </div>
 -->
             <div class="step"><h2 class="red">Justification of <q>Outstanding Universal Value</q>
-                </h2>
+                        (<abbr>OUV</abbr>) </h2>
                 <h3>Jewish sites nominated for <em>UNESCO World Heritage List</em></h3>
+                <!--<p>17 proposals from Germany on tentative list: Three claiming OUV of Jewish sites</p>-->
                 <ol class="medium line-height-one-five">
 
                     <li><a href="https://whc.unesco.org/en/tentativelists/5982/"> Old Synagogue and
                             Mikveh in Erfurt – Testimonies of everyday life, religion and town
-                            history between change and continuity (15/02/2015) </a></li>
+                            history between change and continuity (15/02/2015) </a><blockquote class="small"> […] and
+                                singular authentic objects:  […]  as well as around 60 preserved tombstones from the 13th to 15th century from the former Jewish cemetery. </blockquote></li>
                     <li><a href="https://whc.unesco.org/en/tentativelists/5975/"> ShUM cities of
                             Speyer, Worms and Mainz (15/01/2015)</a>
                         <blockquote class="small">To this day the cemetery in Worms, largely
@@ -237,7 +239,7 @@
                             Currently 1.100 <span class="dotted">dated</span> medieval inscriptions
                             from seven communities: </p>
                         <ul class="line-height-one-five small">
-                            <li>שו״ם | Schum:<ul>
+                            <li>שו״ם | Schum:<ul class="line-height-one-five">
                                     <li>Speyer</li>
                                     <li>Worms</li>
                                     <li>Mainz</li>
@@ -261,7 +263,7 @@
                             <p><a href="resources/img/speyer.png"><img
                                         src="resources/img/speyer.png" /></a></p>
                         </div>
-                        <div class="six columns"><ul>
+                        <div class="six columns"><ul class="line-height-one-five">
                                 <li>Hebrew</li>
                                 <li>German in Hebrew letters (1790<abbr>ff</abbr>)</li>
                                 <li>German (19<sup>th</sup> century)</li>
@@ -298,7 +300,7 @@
                                             <li>by period</li>
                                         </ul>
                                     </li>
-                                    <li> topographical<ul>
+                                    <li> topographical<ul class="line-height-one-five">
                                             <li>by place</li>
                                             <li>by region</li>
                                             <li>by map</li>
@@ -323,7 +325,7 @@
                                 <ul class="even-left medium line-height-one-five">
 
                                     <li> via full-text search </li>
-                                    <li> via indices<ul>
+                                    <li> via indices<ul class="line-height-one-five">
                                             <li><a
                                                   href="http://www.steinheim-institut.de/cgi-bin/epidat?info=index&amp;lang=en&amp;anzeige=stm&amp;view=lfh#lfh"
                                                   >artists and stonemasons</a></li>
@@ -332,14 +334,14 @@
                                                   >memorials</a></li>
                                             <li><a
                                                   href="http://www.steinheim-institut.de/cgi-bin/epidat?info=index&amp;anzeige=symbols&amp;lang=en"
-                                                  >symbols</a><ul>
+                                                  >symbols</a><ul class="line-height-one-five">
                                                   <li>ornaments</li>
                                                   <li>house-symbols</li>
                                                 </ul></li>
                                             <li>persons</li>
                                             <li>languages</li>
                                             <li>words and abbrevations</li>
-                                            <li>list of words<ul>
+                                            <li>list of words<ul class="line-height-one-five">
                                                   <li>words only used on headstones for men | women
                                                   etc.</li>
                                                 </ul></li>
@@ -364,13 +366,13 @@
                                 <h5><strong>Analyze /w embedded webservices </strong></h5>
                                 <ul class="even-left medium line-height-one-five">
 
-                                    <li> for visualization <ul>
+                                    <li> for visualization <ul class="line-height-one-five">
                                             <li><a
                                                   href="http://www.steinheim-institut.de/cgi-bin/epidat?info=geobrowser&amp;lang=en"
                                                   >DARIAH-DE Geo-Browser for spatio-temporal
                                                   visualisation</a></li>
                                         </ul></li>
-                                    <li> for annotation<ul>
+                                    <li> for annotation<ul class="line-height-one-five">
                                             <li><a
                                                   href="http://www.steinheim-institut.de/cgi-bin/epidat?id=hha-3361"
                                                   >DARIAH-DE Annotation Service</a></li>
@@ -440,6 +442,7 @@ history
                     geology (materials)
 -->
             <div class="step">
+                <h2 class="red">Mainz, Gedenkfriedhof (mz1-2203)</h2>
                 <div class="row">
                     <div class="six columns">
                         <blockquote class="right medium">‎‏זה קבר של הרב ר׳ מאיר בר אברהם הכהן הזקן
@@ -450,7 +453,7 @@ history
                                     src="resources/img/2203_mz1_LDA-2008-074.png" /></a></figure><p
                             class="x-small right up-25"><a
                                 href="http://www.steinheim-institut.de/cgi-bin/epidat?id=mz1-2203"
-                                >mz1-2203 foto by LDA Mainz</a></p>
+                                >mz1-2203 – foto by LDA Mainz</a></p>
                     </div><div class="six columns">
                         <dl class="medium">
                             <dt class="red">name</dt>
@@ -469,13 +472,14 @@ history
                         </dl></div></div>
             </div>
             <div class="step">
+                <h2 class="red">Hamburg-Altona, Königstraße (hha-2338)</h2>
                 <div class="row">
                     <div class="six columns">
                         <figure class="mfp-lightbox"><a href="resources/img/2338_FN_0206040127.jpg"
                                     ><img src="resources/img/2338_FN_0206040127.jpg"
                              /></a></figure><p class="x-small right"><a
                                 href="http://www.steinheim-institut.de/cgi-bin/epidat?id=hha-2338"
-                                >mz1-2203 foto by Bert Sommer</a></p>
+                                >hha-2338 – foto by Bert Sommer</a></p>
                     </div><div class="six columns">
                         <dl class="even-left medium">
                             <dt class="red">ornaments</dt>
@@ -571,7 +575,7 @@ history
                 <figure class="mfp-lightbox">
                     <a href="resources/img/lichtisch_kanne.png"><img
                             src="resources/img/lichtisch_kanne.png" /></a></figure><p
-                    class="right x-small"><a
+                                class="right x-small">HyperImage <a
                         href="http://www.uni-lueneburg.de/hyperimage/HI_Altona/">Lighting Table</a>
                     with cans (Hamburg chronologically)</p>
             </div>
@@ -650,8 +654,7 @@ history
                     <blockquote class="down-50">Symbols, ornaments, decoration found on Jewish
                         headstones as well as biblical quotations in the epitaphs or the materials
                         of the headstones or the type of script used are not strictly limited to
-                        Jewish cultural life. <ul
-                            class="substep line-height-one-five down-50 justify">
+                        Jewish cultural life. <ul class="line-height-one-five down-50 justify">
                             <li>Refering to authority files and use of controlled vocabularies help
                                 to disseminate the results of our research</li>
                         </ul>
@@ -948,7 +951,6 @@ history
             </div>
             <div class="step">
                 <h2 class="red">spatial relations</h2>
-                
                 <dl>
                     <dt>rationale</dt>
                     <dd>A single object – the <q>headstone</q> – is always part of an ensemble – the
@@ -956,24 +958,28 @@ history
                 </dl>
                 <div class="row">
                     <div class="six columns">
-                <ul class="down-50">
-                    <li><a
-                            href="https://geobrowser.de.dariah.eu/embed/?kml=http://steinheim-institut.de/daten/epidat.kml"
-                            >DARIAH-DE Geobrowser</a> for spatio-temporal visualization across
-                        corpora</li>
-                    <li><a href="http://www.steinheim-institut.de/cgi-bin/epidat?id=e08-4#l"
-                            >topographic navigation</a> within a corpus</li>
-                    <li>3D model of an cemetery with linked data – virtual tour</li>
-                    <li>2D dynamic maps – searching for patterns | data analysis </li>
-                </ul>
+                        <ul class="down-50 line-height-one-five">
+                            <li><a
+                                    href="https://geobrowser.de.dariah.eu/embed/?kml=http://steinheim-institut.de/daten/epidat.kml"
+                                    >DARIAH-DE Geobrowser</a> for spatio-temporal visualization
+                                across corpora</li>
+                            <li><a href="http://www.steinheim-institut.de/cgi-bin/epidat?id=e08-4#l"
+                                    >topographic navigation</a> within a corpus</li>
+                            <li>3D model of an cemetery with linked data – virtual tour</li>
+                            <li>2D dynamic maps – searching for patterns | data analysis </li>
+                        </ul>
                     </div>
                     <div class="six columns">
-                        <figure class="mfp-lightbox"><a href="resources/img/altonak.jpg"><img src="resources/img/altonak.jpg"/></a></figure><p class="x-small right">Working /w Tacheometer on Hamburg cemetery (<a href="https://www.uni-bamberg.de/bauforschung/personen/forschung-tobias-arera-ruetenik/">Tobias Arera-Rütenik</a>)</p>
+                        <figure class="mfp-lightbox"><a href="resources/img/altonak.jpg"><img
+                                    src="resources/img/altonak.jpg" /></a></figure><p
+                            class="x-small right">Working /w Tacheometer on Hamburg cemetery<br />(team-leader: <a
+                                href="https://www.uni-bamberg.de/bauforschung/personen/forschung-tobias-arera-ruetenik/"
+                                >Tobias Arera-Rütenik</a>)</p>
                     </div></div>
             </div>
             <div class="step">
                 <h2 class="red">Spatial relations</h2>
-                <ul>
+                <ul class="line-height-one-five">
                     <li>terrestrial laserscan</li>
                     <li>structured data</li>
 
@@ -1028,19 +1034,18 @@ history
                                     src="resources/img/bf_Skizze_Relationen.jpg" /></a></figure>
                     </div>
                     <div class="six columns"><h2 class="red">shape and form</h2>
-                        <blockquote class="medium">Change in funeral tradition happens slowly. Change
-                            manifests itself not only in textual tradition. Cultural change is
-                            also reflected in the use of (new) forms. Text and form do not develop
-                            synchronously</blockquote>
+                        <blockquote class="medium">Change in funeral tradition happens slowly.
+                            Change manifests itself not only in textual tradition. Cultural change
+                            is also reflected in the use of (new) forms. Text and form do not
+                            develop synchronously</blockquote>
                         <figure class="mfp-lightbox even-right">
                             <a href="resources/img/bf_RiR-Szenario_Abschluesse3.jpg"><img
                                     src="resources/img/bf_RiR-Szenario_Abschluesse3.jpg"
                              /></a></figure>
                         <figure class="mfp-lightbox">
                             <a href="resources/img/Rundbogen_pic.jpg"><img
-                                src="resources/img/Rundbogen_pic.jpg" style="width:30rem" 
-                            /></a></figure>
-                        
+                                    src="resources/img/Rundbogen_pic.jpg" style="width:30rem"
+                             /></a></figure>
                     </div>
                 </div>
             </div>
@@ -1060,7 +1065,7 @@ history
                                     src="resources/img/damage_report.png" /></a></figure><p
                             class="x-small right">damage report שו״ם</p></div>
                     <div class="six columns">
-                        <ol>
+                        <ol class="line-height-one-five">
                             <li>inventarisation: photographic record and – if possible – map </li>
                             <li>documentation: and digital editing </li>
                             <li>damage description </li>
@@ -1086,9 +1091,10 @@ history
                     </div>
                 </div></div>
             <div class="step">
-                <h2 class="red">Tools</h2>
+                <h2 class="red">Translation tool</h2>
+                <p>Identifies quotations, names, places, dates, idioms – dynamic dictionaries </p>
                 <video src="resources/img/Rohuebersetzung.mp4" controls="controls" width="1024"
-                    autoplay="autoplay"></video>
+                    autoplay="autoplay"></video><p class="x-small right">developed by T. Kollatz</p>
             </div>
             <div class="step">
                 <h2 class="red">Digital Epigraphy and Traditional Epigraphy</h2>
@@ -1243,11 +1249,10 @@ history
                 </div>
                 <div class="centered down-100">
                     <h3>
-                        <a href="">literature and software</a></h3><p class="x-small">(to be
-                        done)</p>
+                        <a href="#literature">literature and software</a></h3><p class="x-small"></p>
                 </div>
             </div>
-            <div class="step">
+            <div class="step" id="literature">
                 <h2>Literature &amp; Software</h2>
                 <h4>Digital Epigraphy and EpiDoc</h4>
                 <ul class="small line-height-one-five">
