--- a/index.html
+++ b/index.html
@@ -764,6 +764,7 @@ history
  &lt;langUsage&gt; &lt;language ident="he" usage="100"&gt;Hebrew&lt;/language&gt; &lt;/langUsage&gt;
 &lt;/profileDesc&gt;
 </code></pre>
+                <p class="x-small right">ffb-80-1 <a href="http://www.steinheim-institut.de/cgi-bin/epidat?id=ffb-80-1">html</a> | <a href="http://www.steinheim-institut.de/cgi-bin/epidat?id=ffb-80-teip5">EpiDoc TEI XML</a></p>
             </div>
             <!--<div class="step">
                 <h2 class="red">Schnittstellen</h2>
